# GaytriFarm

./: .env  .gitignore  README.md  build.sh  manage.py  pyproject.toml  railway.toml  railway_cronjob.toml
dairy/: admin.py  models.py  pdf_generator.py  serializers.py  tasks.py  urls.py  utils.py  views.py
dairy/migrations/: 0001_initial.py  0002_initial.py  0002_rename_order_date_order_date_order_status.py  0003_alter_product_name.py  0003_alter_userbill_unique_together.py  0004_product_distributor_price_product_image.py  0004_remove_order_order_id_order_id.py  0005_alter_order_date.py  0005_alter_product_image.py  0006_alter_order_status_userbill.py  0006_product_is_primary.py  0007_alter_userbill_pdf_file.py  0007_distributororder.py  0008_alter_order_date.py  0008_userbill_type.py  0009_delete_userbill.py  0010_cacheorder.py  0011_alter_cacheorder_customer.py  0012_alter_cacheorder_product.py  0013_alter_product_image.py  0014_alter_distributororder_total_price_and_more.py
gaytri_farm_app/: asgi.py  celery.py  custom_authentication.py  custom_permission.py  exceptions.py  firebase-cred.json  firebase_service.py  settings.py  urls.py  utils.py  wsgi.py
user/: admin.py  models.py  pdf_generator.py  serializers.py  service.py  tasks.py  urls.py  views.py
user/management/: __init__.py
user/migrations/: 0001_initial.py  0002_remove_user_is_registered.py  0002_user_is_active_user_is_staff_alter_user_is_superuser.py  0003_emailverificationtoken.py  0003_user_rank.py  0004_alter_user_pin_code.py  0004_user_address_user_city_user_country_user_first_name_and_more.py  0005_alter_user_role.py  0006_alter_user_role.py  (+28 more)
(+5 files in other folders)
